--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,53 @@ header a:hover{
 	color:#fff;
 }
 
+/* Sidebar */
+
+aside#sidebar{
+	color:#fff;
+	float:right;
+	width:30%;
+	margin-top:10px;
+}
+
+article#main-col{
+	float:left;
+	width:65%;
+}
+
+.members{
+	font:13px 'Audiowide', cursive;
+  	padding:15px;
+  	background:#000;
+  	color:#51B84D;
+  	margin-top:10px;
+ 	margin-bottom:10px;
+ 	border:#51B84D 3px solid;
+}
+
+/* Discography */
+
+#boxes{
+	font:11px Arial Black;
+	color:#fff;
+	margin-top:20px;
+}
+
+#boxes .box{
+	float:left;
+	text-align:center;
+	width:30%;
+	padding:10px;
+}
+
+#boxes .box img{
+	width:175px;
+}
+
+.box ul{
+	padding-right:38px;
+	text-align:center;
+}
 
 /* Footer */
 
